--- a/service.html2pdfconverter.csproj
+++ b/service.html2pdfconverter.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
-
+  <ItemGroup>
+    <PackageReference Include="Wkhtmltopdf.NetCore" Version="3.0.2"/>
+  </ItemGroup>
 </Project>
