--- a/service.html2pdfconverter.csproj
+++ b/service.html2pdfconverter.csproj
@@ -4,5 +4,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Wkhtmltopdf.NetCore" Version="3.0.2"/>
+    <None Update="Rotativa/Windows/wkhtmltopdf.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
