--- a/service.html2pdfconverter.csproj
+++ b/service.html2pdfconverter.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Wkhtmltopdf.NetCore" Version="3.0.2"/>
+    <PackageReference Include="Wkhtmltopdf.NetCore" Version="3.0.2" />
     <None Update="Rotativa/Windows/wkhtmltopdf.exe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
